syntax = "proto3";
package rpc_pb;
 
service Log {
  rpc List  (LogFindReq)  returns  (LogResp) {};
  rpc Save 	(LogReq)  returns  (LogResp) {};
  rpc Del 	(LogReq)  returns  (LogResp) {};
}
//用户查找请求
message LogFindReq {
	string id=1;
	string name =2;
	string start_time =3;
	string end_time =4;
	string order_field =5;
	int64 start =6;
	int64 length =7;
	string message =8;
	string key =9;
}
message  LogReq {
   int64 user_id  =1;
   string action =2;
   string content= 3;
   string client_ip =4;
  
}

message  LogResp {
   string message =1;
   int64 total =2;
   int64 page_total=3;
}